# H2COPot

./: .gitignore  pyproject.toml
H2COPot/: pot.py
